html,body nav overflow fix

--- a/src/scss/imports/_global.scss
+++ b/src/scss/imports/_global.scss
@@ -12,8 +12,8 @@ $accent-color:#ffffff;
 $accent-color-dark: #000000;
 
 
-body{
-
+body, html{
+    max-width: 100vw;
     overflow-x: hidden;
 }  
 
